# open-code-reviewer

./: .gitignore  README.md  pyproject.toml
instructions/: example.md
src/actor_review/: ast_extractor.py  main.py  pr.py  retriever.py  review.py
src/open_code_reviewer/: blame.py  config.py  indexer.py  main.py  pr.py  review.py  static_analysis.py
tests/: benchmark.py
