[project]
name = "actor-review"
version = "0.1.0"
description = ""
authors = [
    {name = "Shoji Tokunaga",email = ""}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "anthropic (>=0.105.2,<0.106.0)",
    "pygithub (>=2.9.1,<3.0.0)",
    "litellm (>=1.87.0,<2.0.0)",
    "bert-score (>=0.3.13,<0.4.0)",
    "tree-sitter (>=0.25.2,<0.26.0)",
    "tree-sitter-python (>=0.25.0,<0.26.0)",
    "tree-sitter-javascript (>=0.25.0,<0.26.0)",
    "tree-sitter-java (>=0.23.5,<0.24.0)",
    "tree-sitter-go (>=0.25.0,<0.26.0)",
    "tree-sitter-ruby (>=0.23.1,<0.24.0)",
    "lancedb (>=0.33.0,<0.34.0)",
    "sentence-transformers (>=5.5.1,<6.0.0)"
]

[tool.poetry]
packages = [{include = "actor_review", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
